// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Show View matches the snapshot when loading 1`] = `
<DocumentFragment>
  <header
    class="w-full h-12 flex items-center p-2 md:hidden justify-between"
  >
    <button
      class="w-11 float-left"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrow-left fa-w-14 m-1 text-lg"
        data-icon="arrow-left"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="w-2/3 h-3/4 animate-pulse bg-gray-600"
    />
    <div
      class="w-11"
    />
  </header>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden my-0"
  >
    <div
      class="animate-pulse bg-gray-700 w-1/3 h-0 relative float-left"
      style="padding-top: 46.666666666666664%;"
    />
    <div
      class="float-right w-2/3 pl-2.5"
    >
      <div
        class="animate-pulse bg-gray-700 h-44"
      />
    </div>
  </div>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden"
  >
    <div
      class="animate-pulse bg-gray-700 h-60"
    />
  </div>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden"
  >
    <div
      class="animate-pulse bg-gray-700 h-32"
    />
  </div>
</DocumentFragment>
`;

exports[`Show View matches the snapshot when there is an episode 1`] = `
<DocumentFragment>
  <div
    class="absolute bg-scroll bg-cover bg-center bg-scroll w-full md:max-w-4xl mx-0 md:mx-auto h-full left-0 md:left-auto top-0 pt-12 md:pt-14 pb-14 md:pb-8"
    style="background-image: url(undefined/uploads/images/original_untouched/1/3603.jpg);"
  >
    <div
      class="w-full h-full bg-gray-100 dark:bg-gray-700 bg-opacity-30 dark:bg-opacity-80 overflow-y-auto"
    >
      <header
        class="w-full h-12 flex items-center p-2 md:hidden justify-between p-2 fixed top-0 text-gray-100 bg-gray-100 dark:bg-gray-700 bg-opacity-30 dark:bg-opacity-80"
      >
        <button
          class="w-11 float-left"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-arrow-left fa-w-14 m-1 text-lg"
            data-icon="arrow-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
              fill="currentColor"
            />
          </svg>
        </button>
        <h1
          class="mx-2 font-medium text-lg overflow-x-auto whitespace-nowrap"
        >
          Rick and Morty
        </h1>
        <div
          class="w-11"
        >
          <svg
            aria-hidden="true"
            aria-label="subscribe-button"
            class="svg-inline--fa fa-heart fa-w-16 float-right m-1 text-xl"
            data-icon="heart"
            data-prefix="far"
            focusable="false"
            role="button"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
              fill="currentColor"
            />
          </svg>
        </div>
      </header>
      <div
        class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden my-0"
      >
        <div
          class="w-1/3 mr-2.5 float-left"
        >
          <div
            class="h-0 relative"
            style="padding-top: 140.47619047619045%;"
          >
            <div
              class="animate-pulse bg-gray-700 absolute top-0 left-0 w-full h-full"
            />
            <img
              alt="Rick and Morty"
              class="absolute top-0 left-0 w-full h-full hidden"
              src="undefined/uploads/images/medium_portrait/1/3603.jpg"
            />
          </div>
        </div>
        <div
          class=""
        >
          Rick is a mentally gifted, but sociopathic and alcoholic scientist and a grandfather to Morty; an awkward, impressionable, and somewhat spineless teenage boy. Rick moves into the family home of Morty, where he immediately becomes a bad influence.
        </div>
      </div>
      <div
        class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden"
      >
        <h2
          class="text-xl"
        >
          Show Info
        </h2>
        <ul>
          <li
            class="mt-2"
          >
            <b>
              Network
            </b>
            : Adult Swim
          </li>
          <li
            class="mt-0.5"
          >
            <b>
              Schedule
            </b>
            : 
            <span>
              Sundays
              <span>
                 at 23:00
              </span>
              <span>
                 (30 min)
              </span>
            </span>
          </li>
          <li
            class="mt-0.5"
          >
            <b>
              Status
            </b>
            : Running
          </li>
          <li
            class="mt-0.5"
          >
            <b>
              Show type
            </b>
            : Animation
          </li>
          <li
            class="mt-0.5"
          >
            <b>
              Genres
            </b>
            : Comedy, Adventure, Science-Fiction
          </li>
          <li
            class="mt-3"
          >
            <b>
              Official site
            </b>
            : 
            <span>
              <a
                href="http://www.adultswim.com/videos/rick-and-morty"
              >
                www.adultswim.com
              </a>
            </span>
          </li>
          <li
            class="mt-3"
          >
            <b>
              Rating
            </b>
            : 9
          </li>
        </ul>
      </div>
      <div
        class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden"
      >
        <h2
          class="text-xl mb-2"
        >
          Episode List
        </h2>
        <div
          class="py-1"
          role="button"
          tabindex="1"
        >
          <div
            class="flex justify-between items-center"
          >
            <span>
              Season 1
            </span>
            <span>
              1 Episodes
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Show View matches the snapshot when there is an error 1`] = `
<DocumentFragment>
  <header
    class="w-full h-12 flex items-center p-2 md:hidden justify-between"
  >
    <button
      class="w-11 float-left"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrow-left fa-w-14 m-1 text-lg"
        data-icon="arrow-left"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
          fill="currentColor"
        />
      </svg>
    </button>
    <h1
      class="mx-2 font-medium text-lg overflow-x-auto whitespace-nowrap"
    >
      Error
    </h1>
    <div
      class="w-11"
    />
  </header>
  <div
    class="px-2 py-2.5 bg-red-400 bg-opacity-50 border border-solid border-red-400 p-2.5"
  >
    <div
      class="flex flex-col items-center justify-center"
    >
      <img
        alt="Frustrated Illustration"
        class="opacity-80 mb-2.5"
        src="/frustrated.png"
        width="80"
      />
    </div>
    <h2
      class="font-bold"
    >
      Error
    </h2>
    <p>
      Generic error
    </p>
  </div>
</DocumentFragment>
`;
